--- a/application/views/default/edit-mapel.html
+++ b/application/views/default/edit-mapel.html
@@ -1,13 +1,13 @@
 {% extends "layout-private.html" %}
 
 {% block title %}
-Manajemen Matapelajaran - {{ parent() }}
+Manajemen Mata Pelajaran - {{ parent() }}
 {% endblock %}
 
 {% block content %}
 <div class="module">
     <div class="module-head">
-        <h3>{{ anchor(uri_back, 'Manajemen Matapelajaran')|raw }} / Edit</h3>
+        <h3>{{ anchor(uri_back, 'Manajemen Mata Pelajaran')|raw }} / Edit</h3>
     </div>
     <div class="module-body">
         {{ get_flashdata('mapel')|raw }}
