--- a/application/views/default/welcome.html
+++ b/application/views/default/welcome.html
@@ -25,10 +25,10 @@
         <table class="table table-hover" style="margin-top:10px;">
             <tr>
                 <td width="30%">
-                    <a href="{{ site_url('mapel') }}"><b><i class="menu-icon icon-book"></i> Manajemen Matapelajaran</b></a>
+                    <a href="{{ site_url('mapel') }}"><b><i class="menu-icon icon-book"></i> Manajemen Mata Kuliah</b></a>
                 </td>
                 <td>
-                    Input semua Matapelajaran yang ada di sekolah
+                    Input semua Mata Kuliah yang ada di Universitas
                 </td>
             </tr>
             <tr>
@@ -36,15 +36,15 @@
                     <a href="{{ site_url('kelas') }}"><b><i class="menu-icon icon-tasks"></i> Manajemen Kelas</b></a>
                 </td>
                 <td>
-                    Input semua Kelas yang ada di sekolah
+                    Input semua Kelas yang ada di Universitas
                 </td>
             </tr>
             <tr>
                 <td width="30%">
-                    <a href="{{ site_url('kelas/mapel_kelas') }}"><b><i class="menu-icon icon-paste"></i> Matapelajaran Kelas</b></a>
+                    <a href="{{ site_url('kelas/mapel_kelas') }}"><b><i class="menu-icon icon-paste"></i> Mata Pelajaran Kelas</b></a>
                 </td>
                 <td>
-                    Atur Matapelajaran pada tiap-tiap Kelas
+                    Atur Mata Kuliah pada tiap-tiap Kelas
                 </td>
             </tr>
         </table>
@@ -83,20 +83,11 @@
                 </table>
             </div>
 
-            <div class="well well-small well-box">
-                <b><i class="icon-signin"></i> Riwayat login pengguna</b>
-                <div id="show-last-login-list"></div>
-            </div>
         </div>
         <div class="span6">
             <div class="well well-small well-box">
-                <div class="pull-right">
-                    <a class="muted" href="{{ portal_update_link }}" target="_tab">Portal update</a> |
-                    <a class="muted" href="{{ bug_tracker_link }}" target="_tab">Bug tracker</a>
-                </div>
-                <b><i class="icon-bullhorn"></i> Info Update</b>
-                <table class="table table-striped table-condensed" id="info-update"></table>
-                <input type="hidden" id="info-update-link" value="{{ info_update_link }}">
+                <b><i class="icon-signin"></i> Riwayat login pengguna</b>
+                <div id="show-last-login-list"></div>
             </div>
         </div>
     </div>
