Renew Commit satu

--- a/application/views/default/detail-pengajar.html
+++ b/application/views/default/detail-pengajar.html
@@ -96,7 +96,7 @@
                             <thead>
                                 <tr bgcolor="#fbfbfb">
                                     <th>HARI</th>
-                                    <th>MATAPELAJARAN DAN JAM</th>
+                                    <th>Mata Kuliah DAN JAM</th>
                                 </tr>
                             </thead>
                             <tbody>
