--- a/application/views/default/list-mapel-kelas.html
+++ b/application/views/default/list-mapel-kelas.html
@@ -1,13 +1,13 @@
 {% extends "layout-private.html" %}
 
 {% block title %}
-Matapelajaran Kelas - {{ parent() }}
+Mata Kuliah Kelas - {{ parent() }}
 {% endblock %}
 
 {% block content %}
 <div class="module">
     <div class="module-head">
-        <h3>Matapelajaran Kelas</h3>
+        <h3>Mata Kuliah Kelas</h3>
     </div>
     <div class="module-body">
         {{ get_flashdata('mapel')|raw }}
@@ -63,7 +63,7 @@ Matapelajaran Kelas - {{ parent() }}
                 </div>
             </div>
             <div class="span6">
-                Atur matapelajaran yang ada pada masing - masing kelas
+                Atur mata kuliah yang ada pada masing - masing kelas
             </div>
         </div>
 
