--- a/application/views/default/pantau-ujian.html
+++ b/application/views/default/pantau-ujian.html
@@ -34,7 +34,7 @@ Pantau Ujian - {{ parent() }}
                         <td>{{ tugas.judul }}</td>
                     </tr>
                     <tr>
-                        <th>Matapelajaran</th>
+                        <th>Mata Kuliah</th>
                         <td>{{ tugas.mapel.nama }}</td>
                     </tr>
                     <tr>
