--- a/application/views/default/pengaturan.html
+++ b/application/views/default/pengaturan.html
@@ -34,8 +34,8 @@ Pengaturan - {{ parent() }}
             <div class="control-group">
                 <label class="control-label">Nama sekolah <span class="text-error">*</span></label>
                 <div class="controls">
-                    <input type="text" name="nama-sekolah" class="span8" value="{{ set_value('nama-sekolah', get_pengaturan('nama-sekolah', 'value')) }}">
-                    <br>{{ form_error('nama-sekolah')|raw }}
+                    <input type="text" name="nama-universitas" class="span8" value="{{ set_value('nama-universitas', get_pengaturan('nama-universitas', 'value')) }}">
+                    <br>{{ form_error('nama-universitas')|raw }}
                 </div>
             </div>
             <div class="control-group">
