--- a/application/views/default/pp-jadwal-pengajar.html
+++ b/application/views/default/pp-jadwal-pengajar.html
@@ -16,7 +16,7 @@ Jadwal Mengajar - {{ parent() }}
                     <thead>
                         <tr bgcolor="#fbfbfb">
                             <th>HARI</th>
-                            <th>MATAPELAJARAN DAN JAM</th>
+                            <th>Mata Kuliah DAN JAM</th>
                         </tr>
                     </thead>
                     <tbody>
