--- a/application/views/default/tambah-materi.html
+++ b/application/views/default/tambah-materi.html
@@ -21,7 +21,7 @@ Tambah Materi - {{ parent() }}
                 </div>
             </div>
             <div class="control-group">
-                <label class="control-label">Matapelajaran <span class="text-error">*</span></label>
+                <label class="control-label">Mata Kuliah <span class="text-error">*</span></label>
                 <div class="controls">
                     <select name="mapel_id">
                         <option value="">--pilih--</option>
