--- a/application/views/install/install-step-2.html
+++ b/application/views/install/install-step-2.html
@@ -29,8 +29,8 @@ Install - {{ parent() }}
                     <div class="control-group">
                         <label class="control-label">Nama sekolah <span class="text-error">*</span></label>
                         <div class="controls">
-                            <input type="text" name="nama-sekolah" class="span8" value="{{ set_value('nama-sekolah') }}">
-                            <br>{{ form_error('nama-sekolah')|raw }}
+                            <input type="text" name="nama-universitas" class="span8" value="{{ set_value('nama-universitas') }}">
+                            <br>{{ form_error('nama-universitas')|raw }}
                         </div>
                     </div>
                     <div class="control-group">
