--- a/application/views/install/install-step-3.html
+++ b/application/views/install/install-step-3.html
@@ -14,7 +14,7 @@ Install - {{ parent() }}
 
             <div class="module-body">
                 <div class="well well-small" style="box-shadow: none;">
-                    Atur Kelas dan Matapelajaran yang ada di sekolah. Kelas dan Matapelajaran masih dapat diubah.
+                    Atur Kelas dan Mata Kuliah yang ada di Universitas. Kelas dan Mata Kuliah masih dapat diubah.
                 </div>
                 <form method="post" action="{{ site_url('setup/index/3') }}">
                     <div class="row-fluid">
@@ -182,7 +182,7 @@ Install - {{ parent() }}
                             {% endif %}
                         </div>
                         <div class="span8">
-                            <b>Matapelajaran</b>
+                            <b>Mata Kuliah</b>
                             <hr style="margin-top: 5px; margin-bottom: 5px;">
                             <ul class="unstyled">
                                 <li>
