--- a/application/views/default/jadwal-mapel.html
+++ b/application/views/default/jadwal-mapel.html
@@ -7,7 +7,7 @@ Profilku - {{ parent() }}
 {% block content %}
 <div class="panel panel-default">
     <div class="panel-heading">
-        <strong>Jadwal Matapelajaran</strong>
+        <strong>Jadwal Mata Kuliah</strong>
     </div>
     <div class="panel-body">
         <table class="table">
