--- a/application/views/default/layout-print.html
+++ b/application/views/default/layout-print.html
@@ -24,7 +24,7 @@
                 <br>
                 <div class="kop-print">
                     <img src="{{ get_logo_config() }}">
-                    <div class="kop-nama">{{ get_pengaturan('nama-sekolah', 'value') }}</div>
+                    <div class="kop-nama">{{ get_pengaturan('nama-universitas', 'value') }}</div>
                     <div class="kop-info">Alamat : {{ get_pengaturan('alamat', 'value') }}, Telepon : {{ get_pengaturan('telp', 'value') }}</div>
                 </div>
                 <hr class="kop-print-hr">
