--- a/application/views/default/welcome.html
+++ b/application/views/default/welcome.html
@@ -8,7 +8,7 @@
         <div class="span12">
             <div class="well well-small well-box">
                 <small class="pull-right hidden-phone hidden-tablet">{{ tgl_indo(date('Y-m-d')) }}, IP anda: {{ get_ip() }}</small>
-                Selamat datang di <b>e-learning {{ get_pengaturan('nama-sekolah', 'value') }}</b>
+                Selamat datang di <b>e-learning {{ get_pengaturan('nama-universitas', 'value') }}</b>
                 <br>
                 <i class="icon icon-map-marker"></i> Alamat: {{ get_pengaturan('alamat', 'value') }}
                 {% if get_pengaturan('telp', 'value') is not empty %}
