Renew Commit Ketiga

--- a/application/views/default/donation.html
+++ b/application/views/default/donation.html
@@ -10,7 +10,7 @@
                 <p>
                     Buat temen - temen yang berbaik hati ingin berdonasi untuk aplikasi e-learning ini silahkan kirimkan ke rekening berikut : <br>
                 </p>
-                <p><label class="label label-info">Mandiri A.N Almazari 9000021575973</label></p>
+                <p><label class="label label-info"></label></p>
 
                 Cara transfer dari bank lain ke mandiri via ATM:
                 <div class="row-fluid">
