--- a/application/views/default/welcome.html
+++ b/application/views/default/welcome.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="btn-box-row row-fluid">
-        <div class="span6">
+        <div class="span12">
             <div class="well well-small well-box">
                 <b><i class="icon-bullhorn"></i> Pengumuman</b>
                 <table class="table table-striped table-condensed">
@@ -82,14 +82,13 @@
                     {% endfor %}
                 </table>
             </div>
-
         </div>
-        <div class="span6">
+<!--        <div class="span6">
             <div class="well well-small well-box">
                 <b><i class="icon-signin"></i> Riwayat login pengguna</b>
                 <div id="show-last-login-list"></div>
             </div>
-        </div>
+        </div>-->
     </div>
     {% endif %}
 
@@ -107,7 +106,7 @@
     {% endif %}
 
     <div class="btn-box-row row-fluid">
-        <div class="span6">
+        <div class="span12">
             <div class="well well-small well-box">
                 <b><i class="icon-bullhorn"></i> Pengumuman</b>
                 <table class="table table-striped table-condensed">
@@ -119,12 +118,12 @@
                 </table>
             </div>
         </div>
-        <div class="span6">
+<!--        <div class="span6">
             <div class="well well-small well-box">
                 <b><i class="icon-signin"></i> Riwayat login pengguna</b>
                 <div id="show-last-login-list"></div>
             </div>
-        </div>
+        </div>-->
     </div>
     {% endif %}
 
@@ -142,7 +141,7 @@
     {% endif %}
 
     <div class="btn-box-row row-fluid">
-        <div class="span6">
+        <div class="span12">
             <div class="well well-small well-box">
                 <b><i class="icon-tasks"></i> Tugas terbaru</b>
                 <table class="table table-striped table-condensed">
@@ -170,7 +169,7 @@
             </div>
         </div>
 
-        <div class="span6">
+        <div class="span12">
             <div class="well well-small well-box">
                 <b><i class="icon-bullhorn"></i> Pengumuman</b>
                 <table class="table table-striped table-condensed">
@@ -182,10 +181,10 @@
                 </table>
             </div>
 
-            <div class="well well-small well-box">
+<!--            <div class="well well-small well-box">
                 <b><i class="icon-signin"></i> Riwayat login pengguna</b>
                 <div id="show-last-login-list"></div>
-            </div>
+            </div>-->
         </div>
     </div>
     {% endif %}
