--- a/assets/comp/nestedSortable/nestedSortable.css
+++ b/assets/comp/nestedSortable/nestedSortable.css
@@ -3,9 +3,9 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : Apr 3, 2014, 8:54:11 PM
-    Author     : almazari
+    CSS made by Author     : almazari
 */
 
 
